--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
+  <title>Sophomore Portfolio</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <h1 id="heading">Welcome to my Sophomore portfolio⋆</h1>
+  <ul>
+  <h2>This is all my work in this past year</h2>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Labs.html">Labs</a></li>
+      <li><a href="Games.html">Games</a></li>
+    </ul>
+    </div>
+      <div class="container1">
+        <div id="description">
+  <p>Hello, My name is  Wendy and welcome to a collection of my past work this past year. I am very happy that you are able to see my work that i ahve made this year and hope that you see manymore in the future. Over this year i ahve learned alot and was able to meet new peopel which i am soo great full for.  </p>
+          </div>
+          <div id ="photo">
+  <img src="Screenshot 2024-03-28 8.27.39 PM.png" alt="wenwen" width="400px" height="400px">
+             </div>
+              </div>
+  <script src="script.js"></script>
+</body>
+
+</html>
