--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
-  <title>Sophomore Portfolio</title>
+  <title>My Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
