--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1 id="heading">Welcome to my portfolio⋆</h1>
   <ul>
-  <h2>This is all my work in this past year</h2>
+  <h2>This is all my work in this past two years</h2>
       <li><a href="index.html">Home</a></li>
       <li><a href="Games.html">Games</a></li>
     </ul>
