--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <h2>This is all my work in this past two years</h2>
       <li><a href="index.html">Home</a></li>
       <li><a href="Games.html">Games</a></li>
+      <li><a href="CFU.html">CFU</a></li>
     </ul>
     </div>
       <div class="container1">
