--- a/CFU.html
+++ b/CFU.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css"  />
   < banner>
  <tittle>CFU/tittle>
