--- a/CFU.html
+++ b/CFU.html
@@ -8,3 +8,14 @@
   <div id="navi">
     <ul>
   <h2>CFU</h2>
+<ul>
+  <iframe width="392" height="620" style="border: 0px;" src="https://drive.google.com/file/d/18-hI6z17o8dHHi6jny3ZZNfUXw3Wjydd/view"></iframe>
+  </ul>
+      <ul>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/gTlCu9C3DzrBjgy0-OeVra7tZZWbhmcQlO6QMfi4AjA/embed"></iframe>
+   </ul>
+    <ul>
+      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/vPFudx1s7ms0pRM2OXHiEiz40lXBhF_AER6K7g8cRBk/embed"></iframe>
+    </ul>
+     <li><a href="index.html">Home</a></li>
+  </div>
