--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
-  <title>My Portfolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Junior Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <h1 id="heading">Welcome to my portfolio</h1>
-  <ul>
-  <h2>This is all my work in this past two years</h2>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="Games.html">Games</a></li>
-      <li><a href="CFU.html">CFU</a></li>
-    </ul>
-    </div>
-      <div class="container1">
-        <div id="description">
-  <p>Hello, My name is  Wendy and welcome to a collection of my past work this past year. I am very happy that you are able to see my work that i ahve made this year and hope that you see manymore in the future. Over this year i ahve learned alot and was able to meet new peopel which i am soo great full for.  </p>
-          </div>
-          <div id ="photo">
-  <img src="Screenshot 2024-03-28 8.27.39 PM.png" alt="wenwen" width="400px" height="400px">
-             </div>
-              </div>
-  <script src="script.js"></script>
-</body>
 
+    <header>
+        <div class="banner">
+            <h1>Junior Portfolio</h1>
+        </div>
+    </header>
+
+    <main>
+        <div class="content">
+            <p>Welcome to my junior portfolio. Click the button below to view my CFU.</p>
+            <a href="https://your-cfu-link.com" class="cta-button">Go to CFU</a>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Name | All rights reserved</p>
+    </footer>
+
+</body>
 </html>
