--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <div class="content">
-            <p>Welcome to my junior portfolio. Click the button below to view my CFU.</p>
+            <p>Welcome to my junior portfolio! Here you'll find my work and projects. Click the button below to view my CFU.</p>
             <a href="https://your-cfu-link.com" class="cta-button">Go to CFU</a>
         </div>
     </main>
