--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Junior Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
+  <title>Sophomore Portfolio</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-
-    <header>
-        <div class="banner">
-            <h1>Junior Portfolio</h1>
-        </div>
-    </header>
-
-    <main>
-        <div class="content">
-            <p>Welcome to my junior portfolio! Here you'll find my work and projects. Click the button below to view my CFU.</p>
-            <a href="https://your-cfu-link.com" class="cta-button">Go to CFU</a>
-        </div>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Your Name | All rights reserved</p>
-    </footer>
-
-</body>
-</html>
+  <h1 id="heading">Welcome to my portfolio⋆</h1>
+  <ul>
+  <h2>This is all my work in this past year</h2>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Labs.html">Labs</a></li>
