--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
   <h1 id="heading">Welcome to my portfolio</h1>
   <ul>
   <h2>This is all my work in this past year</h2>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="CFU.html">CFU</a></li>
     
