--- a/CFU.html
+++ b/CFU.html
@@ -9,9 +9,10 @@
     <ul>
   <h2></h2>
 <ul>
-  <iframe src="https://drive.google.com/file/d/18-hI6z17o8dHHi6jny3ZZNfUXw3Wjydd/view" title="CFU #2  Concatenation Program "></iframe>
-  
-    
+ <video width="320" height="240" controls>
+  <source src="CFU2.mp4" type="video/mp4">
+</video>
+
     </ul>
      <li><a href="index.html">Home</a></li>
   </div>
