--- a/CFU.html
+++ b/CFU.html
@@ -10,7 +10,7 @@
   <h2></h2>
 <ul>
  <video width="320" height="240" controls>
-  <source src="CFU2.mp4" type="video/mp4">
+  <source src="CFU.mp4" type="video/mp4">
 </video>
 
     </ul>
