--- a/CFU.html
+++ b/CFU.html
@@ -9,10 +9,9 @@
     <ul>
   <h2></h2>
 <ul>
- <video width="400" height="300" controls>
+<video width="400" height="300" autoplay>
   <source src="CFU2.mp4" type="video/mp4">
-</video>
-
+  </video>
     </ul>
      <li><a href="index.html">Home</a></li>
   </div>
