--- a/CFU.html
+++ b/CFU.html
@@ -9,9 +9,13 @@
     <ul>
   <h2></h2>
 <ul>
-<video width="400" height="300" autoplay>
-  <source src="CFU #2  Concatenation Program  (Sep 16, 2024 at 7_28 PM).mp4" type="video/mp4">
-  </video>
+<ul> <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/VYqxR88MTofHtuCG7E7YvSnq5JQV0wA0R-No7837yAs/embed"></iframe>
+  </ul>
+      <ul>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/gTlCu9C3DzrBjgy0-OeVra7tZZWbhmcQlO6QMfi4AjA/embed"></iframe>
+   </ul>
+    <ul>
+      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/vPFudx1s7ms0pRM2OXHiEiz40lXBhF_AER6K7g8cRBk/embed"></iframe>
     </ul>
      <li><a href="index.html">Home</a></li>
   </div>
