--- a/CFU.html
+++ b/CFU.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <link href="style.css"  />
-<banner>
- <tittle>CFU</tittle>
-</banner>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  < banner>
+ <tittle>CFU</tittle> 
+    </banner>
   <div id="navi">
     <ul>
-  <h2></h2>
-<ul>
-<ul> <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/VYqxR88MTofHtuCG7E7YvSnq5JQV0wA0R-No7837yAs/embed"></iframe>
+  <h2>CFU</h2>
+       </ul>
+    <ul>
+  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/VYqxR88MTofHtuCG7E7YvSnq5JQV0wA0R-No7837yAs/embed"></iframe>
   </ul>
       <ul>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/gTlCu9C3DzrBjgy0-OeVra7tZZWbhmcQlO6QMfi4AjA/embed"></iframe>
