--- a/CFU.html
+++ b/CFU.html
@@ -14,7 +14,7 @@
   <iframe width="490" height="620" style="border: 0px;" src="https://py3.codeskulptor.org"></iframe>
   </ul>
       <ul>
-    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/gTlCu9C3DzrBjgy0-OeVra7tZZWbhmcQlO6QMfi4AjA/embed"></iframe>
+    <iframe width="392" height="620" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
    </ul>
     <ul>
       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/vPFudx1s7ms0pRM2OXHiEiz40lXBhF_AER6K7g8cRBk/embed"></iframe>
