--- a/CFU.html
+++ b/CFU.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
+  <title>My Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  < banner>
- <tittle>CFU</tittle> 
-    </banner>
+
   <div id="navi">
     <ul>
   <h2>CFU</h2>
