--- a/CFU.html
+++ b/CFU.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
-  <title>My Portfolio</title>
+  <title>CFU</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 
   <div id="navi">
