--- a/CFU.html
+++ b/CFU.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
-  <title>CFU</title>
+ <html>
+<body>
   <link href="style.css" rel="stylesheet" type="text/css" />
-
+  < banner>
+ <tittle>Games</tittle> 
+    </banner>
   <div id="navi">
+    <ul>
+  <h2>Games</h2>
     <ul>
   <h2>CFU</h2>
        </ul>
