--- a/CFU.html
+++ b/CFU.html
@@ -5,13 +5,9 @@
 <body>
   <link href="style.css" rel="stylesheet" type="text/css" />
   < banner>
- <tittle>Games</tittle> 
+ <tittle>CFU</tittle> 
     </banner>
   <div id="navi">
-    <ul>
-  <h2>Games</h2>
-    <ul>
-  <h2>CFU</h2>
        </ul>
     <ul>
       <h4>CFU2</h4>
