--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
-  <title>My Portfolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href='https://fonts.googleapis.com/css?family=Twinkle Star' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Gamja Flower' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Hachi Maru Pop' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Bonbon' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Clicker Script' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Fleur De Leah' rel='stylesheet'>
+ <link href="style.css" rel="stylesheet" type="text/css">
+  <title>Github Portfolio</title>
+ 
 </head>
-
 <body>
-  <h1 id="heading">Welcome to my portfolio</h1>
-  <ul>
-      <li><a href="CFU.html">CFU</a></li>
-    
+   <div class = "banner"> 
+ <h1> CFU</h1>
+  </h2>Wendy Fjardo</h2>
+  <img src="me.png" alt="me" width="50px">
+  <p> Brief BIO</p>
+  </div>
+</body>
+
+</html>
