--- a/CFU.html
+++ b/CFU.html
@@ -4,9 +4,9 @@
  <html>
 <body>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  < banner>
- <tittle>CFU</tittle> 
-    </banner>
+<div class="banner">
+  <h1>CFU</h1>
+</div>
   <div id="navi">
        </ul>
     <ul>
