--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <body>
   <h1 id="heading">Welcome to my portfolio</h1>
   <ul>
-      <li><a href="CFU.html">CFU</a></li>
+      <li><a href="CFU.html" style="font-size: 24px; color: #FF4500; font-weight: bold; text-decoration: none;">CFU</a></li>
     
