--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <body>
   <h1 id="heading">Welcome to my portfolio</h1>
   <ul>
-      <li><a href="CFU.html" style="font-size: 24px; color: #FF4500; font-weight: bold; text-decoration: none;">CFU</a></li>
-    
+      <div class="link-box">
+  <li><a href="CFU.html" class="box-link">CFU</a></li>
+</div>
