--- a/index.html
+++ b/index.html
@@ -16,3 +16,6 @@
       <div class="link-box">
   <li><a href="CFU.html" class="box-link">CFU</a></li>
 </div>
+    <div class="link-box">
+  <li><a href="Flowchart.html" class="box-link">CFU</a></li>
+</div>
