--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
   <li><a href="CFU.html" class="box-link">CFU</a></li>
 </div>
     <div class="link-box">
-  <li><a href="Flowchart.html" class="box-link">CFU</a></li>
+  <li><a href="Flowchart.html" class="box-link">Flowchart/a></li>
 </div>
