--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <h1 id="heading">Welcome to my junior portfolio</h1>
   <ul>
-      <div class="link-box">
-  <li><a href="CFU.html" class="box-link">CFU</a></li>
-</div>
-    
-    <div class="link-box">
-  <li><a href="Flowchart.html" class="box-link">Flowchart/a></li>
-</div>
+      ‹nav>
+<ul>
+<li>a href="#about">About Me</></li>
+‹li><a href="#projects">Projects</a></1i> <li><a href="#contact">Contact</a></1¡>
+</ul>
+/nav>
+</header>
