--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <ul>
       ‹nav>
 <ul>
-<li>a href="#about">About Me</></li>
-‹li><a href="#projects">Projects</a></1i> <li><a href="#contact">Contact</a></1¡>
+<li><a href="#about">About Me</></li>
+<li><a href="#projects">Projects</a></1i> 
+<li><a href="#contact">Contact</a></1¡>
 </ul>
 /nav>
 </header>
