--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   <h1 id="heading">Welcome to my junior portfolio</h1>
   <ul>
-      ‹nav>
+      <nav>
 <ul>
 <li><a href="#about">About Me</></li>
 <li><a href="#projects">Projects</a></1i> 
 <li><a href="#contact">Contact</a></1¡>
 </ul>
-/nav>
+      </nav>
 </header>
