--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <nav>
 <ul>
 <li><a href="#about">About Me</></li>
-<li><a href="#projects">Projects</a></1i> 
-<li><a href="#contact">Contact</a></1¡>
+<li><a href="#projects">Projects</a></li> 
 </ul>
       </nav>
 </header>
