--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 <body>
   <h1 id="heading">Welcome to my junior portfolio</h1>
   <ul>
-      <nav>
-<ul>
-<li><a href="#about">About Me</></li>
-<li><a href="#projects">Projects</a></li> 
-</ul>
-      </nav>
+<header>
+  <nav>
+    <ul>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#projects">Projects</a></li> 
+    </ul>
+  </nav>
 </header>
+
