--- a/index.html
+++ b/index.html
@@ -21,4 +21,12 @@
     </ul>
   </nav>
 </header>
+<section id="about" class="content-section">
+  <h2>About Me</h2>
+  <p>This is the About Me section. You can add information about yourself here.</p>
+</section>
 
+<section id="projects" class="content-section">
+  <h2>Projects</h2>
+  <p>This is the Projects section. Showcase your projects here.</p>
+</section>
