--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
   <div id="navi">
   <h2>This is all my work in this past two months :</h2>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="About Me.html">About Me</a></li>
       <li><a href="CFU.html">progect</a></li>
       <li><a href="flowcharts.html">Flowcharts</a></li>
     </ul>
     </div>
       <div class="container1">
         <div id="description">
-  <p>✿Hello, My name is wendy and welcome to a collection of my past work this past year. I am a sophomore at Thomas A Edison CTE High School. I am currently taking Computer Science Principles and I am taking this class to further my knowledge of computer science. Over this course I have learned a lot about coding and how to create websites. I have also learned a lot about the different types of coding such as HTML,CSS, and Javascript. I was able to create these labs and projects using the coding languages I learned in this class. I hope you enjoy them! </p>
-          </div>
 
 </body>
 
