--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <link href='https://fonts.googleapis.com/css?family=Hi Melody' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Send Flowers' rel='stylesheet'>
-  <title>Sophomore Portfolio</title>
+  <title> junior Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -16,7 +16,7 @@
   <h2>This is all my work in this past two months :</h2>
     <ul>
       <li><a href="About Me.html">About Me</a></li>
-      <li><a href="CFU.html">progect</a></li>
+      <li><a href="CFU.html"> project </a></li>
       <li><a href="flowcharts.html">Flowcharts</a></li>
     </ul>
     </div>
