--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
       <li><a href="About Me.html">About Me</a></li>
       <li><a href="CFU.html"> project </a></li>
-      <li><a href="flowcharts.html">Flowcharts</a></li>
+      <li><a href="Flowcharts.html">Flowcharts</a></li>
     </ul>
     </div>
       <div class="container1">
