--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     </div>
       <div class="container1">
         <div id="description">
-
+<div id ="photo">
+  <img src="" width="470px" height="400px"> 
+             </div>
+              </div>
 </body>
 
 </html>
