--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
       <div class="container1">
         <div id="description">
 <div id ="photo">
-  <img src="" width="470px" height="400px"> 
+  <img src="IMG_0361.jpeg" width="470px" height="400px"> 
              </div>
-              </div>
-</body>
+              </body>
 
 </html>
