--- a/CFU.html
+++ b/CFU.html
@@ -14,7 +14,44 @@
     <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
    </ul>
     <ul>
-      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/vPFudx1s7ms0pRM2OXHiEiz40lXBhF_AER6K7g8cRBk/embed"></iframe>
-    </ul>
+      <h4>CFU3</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU4</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU5</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU6</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU7</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU8</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU9</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU10</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU11</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
+   <ul>
+      <h4>CFU12</h4>
+    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+   </ul>
      <li><a href="index.html">Home</a></li>
   </div>
