--- a/Flowchart.html
+++ b/Flowchart.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+ <html>
+<body>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+<div class="banner">
+  <h1>Flowchart</h1>
+</div>
+  <div id="navi">
