--- a/Flowchart.html
+++ b/Flowchart.html
@@ -9,3 +9,6 @@
 </div>
   <div id="navi">
  <h4>flowchart CFU#10</h4>
+<div id ="photo">
+  <img src="IMG_0361.jpeg" width="470px" height="400px"> 
+             </div>
