--- a/Flowchart.html
+++ b/Flowchart.html
@@ -8,7 +8,14 @@
   <h1>Flowchart</h1>
 </div>
   <div id="navi">
- <h4>flowchart CFU#10</h4>
+ <h4>Flowchart CFU#10</h4>
 <div id ="photo">
-  <img src="IMG_0361.jpeg" width="470px" height="400px"> 
+  <img src="IMG_0371.jpeg" width="470px" height="400px"> 
              </div>
+<ul>
+ <h4>Flowchart CFU#11</h4>
+<div id ="photo">
+  <img src="IMG_0371.jpeg" width="470px" height="400px"> 
+             </div>
+ 
+</ul>
