--- a/Flowchart.html
+++ b/Flowchart.html
@@ -19,3 +19,10 @@
              </div>
  
 </ul>
+<ul>
+ <h4>Flowchart CFU#12</h4>
+<div id ="photo">
+  <img src="IMG_0372.jpeg" width="470px" height="400px"> 
+             </div>
+ 
+</ul>
