--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+ <html>
+<body>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+<div class="banner">
+  <h1>About Me</h1>
+</div>
+  <div id="navi">
+     <div class="container1">
+        <div id="description">
+  <p>Hello, My name is wendy I am a student at Thomas Edison. I am in the class for Web development. I love my class. I enjoy what I do. I love creating websites. It brings me happiness because I get to put in my own personality and decoration into these apps.  </p>
+          </div>
+          <div id ="photo">
+  <img src="" alt="tantan" width="470px" height="400px"> 
+             </div>
+              </div>
