--- a/AboutMe.html
+++ b/AboutMe.html
@@ -13,6 +13,6 @@
   <p>Hello, My name is wendy I am a student at Thomas Edison. I am in the class for Web development. I love my class. I enjoy what I do. I love creating websites. It brings me happiness because I get to put in my own personality and decoration into these apps.  </p>
           </div>
           <div id ="photo">
-  <img src="IMG_0122.jpeg" alt="tantan" width="470px" height="400px"> 
+  <img src="IMG_0122.jpeg" alt="Wendolyn" width="470px" height="400px"> 
              </div>
               </div>
