--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,3 +16,5 @@
   <img src="IMG_0122.jpeg" alt="Wendolyn" width="470px" height="400px"> 
              </div>
               </div>
+<li><a href="index.html">Home</a></li>
+  </div>
