--- a/CFU.html
+++ b/CFU.html
@@ -15,47 +15,47 @@
    </ul>
     <ul>
       <h4>CFU2</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
    </ul>
    <ul>
       <h4>CFU3</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_9OuvAyG9gR1pfRs.py"></iframe>
+    <iframe width="60l" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_9OuvAyG9gR1pfRs.py"></iframe>
    </ul>
    <ul>
       <h4>CFU4</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_HidzPTMMqBSRmxN.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_HidzPTMMqBSRmxN.py"></iframe>
    </ul>
    <ul>
       <h4>CFU5</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_6FgCaGkMV7LdNq0.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_6FgCaGkMV7LdNq0.py"></iframe>
    </ul>
    <ul>
       <h4>CFU6</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_TK3NdP1Nvy7r0n8.py"></iframe>
    </ul>
    <ul>
       <h4>CFU7</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_hGd9WNNccJTJ7hM.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_hGd9WNNccJTJ7hM.py"></iframe>
    </ul>
    <ul>
       <h4>CFU8</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_bNJqGE8tnTorAXI.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_bNJqGE8tnTorAXI.py"></iframe>
    </ul>
    <ul>
       <h4>CFU9</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_bwAA61FgRX6txuf.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_bwAA61FgRX6txuf.py"></iframe>
    </ul>
    <ul>
       <h4>CFU10</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_8EpVhH30seCvIuR.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_8EpVhH30seCvIuR.py"></iframe>
    </ul>
    <ul>
       <h4>CFU11</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_ZUlWNgYn7eiqefV.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_ZUlWNgYn7eiqefV.py"></iframe>
    </ul>
    <ul>
    <h4>CFU12</h4>
-    <iframe width="400" height="300" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_5jRGt5RW2jd80se.py"></iframe>
+    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_5jRGt5RW2jd80se.py"></iframe>
    </ul>
      <li><a href="index.html">Home</a></li>
   </div>
