--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <li><a href="CFU.html">  project </a></li>
       <li><a href="Flowchart.html">Flowcharts</a></li>
     </ul>
+    <ul>
+      <h4> sophomore portfolio, </h4>
+    <iframe width="20p" height="200" style="border: 0px;" src="https://wendyf30.github.io/Sophomore_Portfolio/"></iframe>
+   </ul>
     </div>
       <div class="container1">
         <div id="description">
