--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
       <li><a href="AboutMe.html">AboutMe</a></li>
       <li><a href="CFU.html">  project </a></li>
       <li><a href="Flowchart.html">Flowcharts</a></li>
+      <li><a href="https://wendyf30.github.io/Sophomore_Portfolio/"> sophomore year portfolio, </a></li>
     </ul>
-    <ul>
-      <h4> sophomore portfolio, </h4>
-    <iframe width="20p" height="200" style="border: 0px;" src="https://wendyf30.github.io/Sophomore_Portfolio/"></iframe>
-   </ul>
     </div>
       <div class="container1">
         <div id="description">
