--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="AboutMe.html">AboutMe</a></li>
       <li><a href="CFU.html">  project </a></li>
       <li><a href="Flowchart.html">Flowcharts</a></li>
+      <li><a href="Flowchart.html">Flowcharts</a></li>
       <li><a href="https://wendyf30.github.io/Sophomore_Portfolio/"> sophomore_portfolio </a></li>
     </ul>
     </div>
