--- a/Test-Quiz.html
+++ b/Test-Quiz.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+ <html>
+<body>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+<div class="banner">
+  <h1>Test and Quiz</h1>
+</div>
+  <div id="navi">
+ <h4>Test 1</h4>
