--- a/Test-Quiz.html
+++ b/Test-Quiz.html
@@ -13,6 +13,6 @@
       <h4>CFU1</h4>
     <iframe width="600" height="380" style="border: 0px;" src=" <ul>
       <h4>Test1</h4>
-    <iframe width="600" height="380" style="border: 0px;" src="https://py3.codeskulptor.org/#user309_dLPRO6X5tSJpgif.py"></iframe>
-   </ul>"></iframe>
-   </ul>
+    <div id ="photo">
+  <img src="https://courses.projectstem.org/courses/162288/quizzes/8693148?module_item_id=36090695" width="470px" height="400px"> 
+             </div>
