--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="AboutMe.html">AboutMe</a></li>
       <li><a href="CFU.html">  project </a></li>
       <li><a href="Flowchart.html">Flowcharts</a></li>
-      <li><a href="Test-Quiz.html">Test/Quiz</a></li>
+      <li><a href="https://wendyf30.github.io/Sophomore_Portfolio/">Sphomore_Portfolio</a></li>
     
     </ul>
     </div>
