--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="CFU.html">  project </a></li>
       <li><a href="Flowchart.html">Flowcharts</a></li>
       <li><a href="https://wendyf30.github.io/Sophomore_Portfolio/">Sphomore_Portfolio</a></li>
-        <li><a href="https://thomas-a-edison-cte-hs.github.io/iAmsterdam/index.html/">Sphomore_Portfolio</a></li>
+        <li><a href="index.html/">MedPocket</a></li>
     
     </ul>
     </div>
