--- a/G4c.html
+++ b/G4c.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+ <html>
+<body>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+<div class="banner">
+  <h1>G4C Challenge</h1>
+</div>
+  <div id="navi">
+ <h4>Chaterter Photos</h4>
+<div id ="photo">
+  <img src="IMG_0371.jpeg" width="470px" height="400px"> 
+             </div>
+<ul>
+ <h4>Gigi</h4>
+<div id ="photo">
+  <img src="IMG_0372.jpeg" width="470px" height="400px"> 
+             </div>
+ 
+</ul>
+<ul>
+ <h4>Letter of Rejected</h4>
+<div id ="photo">
+  <img src="IMG_0373.jpeg" width="470px" height="400px"> 
+             </div>
+ 
+</ul>
+<li><a href="index.html">Home</a></li>
+  </div>
