--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="CFU.html">  project </a></li>
       <li><a href="Flowchart.html">Flowcharts</a></li>
       <li><a href="https://wendyf30.github.io/Sophomore_Portfolio/">Sphomore_Portfolio</a></li>
-        <li><a href="index.html">MedPocket</a></li>
+        <li><a href="G4c.html">G4C challenge</a></li>
     
     </ul>
     </div>
