--- a/G4c.html
+++ b/G4c.html
@@ -10,7 +10,7 @@
   <div id="navi">
  <h4>Chaterter Photos</h4>
 <div id ="photo">
-  <img src="IMG_0371.jpeg" width="470px" height="400px"> 
+  <img src="IMG_0744.PNG" width="470px" height="400px"> 
              </div>
 <ul>
  <h4>Gigi</h4>
