--- a/G4c.html
+++ b/G4c.html
@@ -16,7 +16,8 @@
 <ul>
  <h4>Gigi</h4>
 <div id ="photo">
-  <img src="IMG_0372.jpeg" width="470px" height="400px"> 
+  <img src="IMG_0746.PNG" width="470px" height="400px"> 
+ <img src="IMG_0747.PNG" width="470px" height="400px"> 
              </div>
  
 </ul>
