--- a/G4c.html
+++ b/G4c.html
@@ -26,7 +26,17 @@
 <div id ="photo">
   <img src="Notification About Your Entry to the 2025 G4C Student Challenge.eml" width="1000px" height="400px"> 
              </div>
- 
-</ul>
+ </ul>
+
 <li><a href="index.html">Home</a></li>
   </div>
+<
+<div class="banner">
+  <h1>Game Challenge</h1>
+</div>
+  <div id="navi">
+       </ul>
+    <ul>
+      <h4>LoveEarth</h4>
+    <iframe width="600" height="380" style="border: 0px;" src="https://studio.code.org/projects/applab/3BAf7Pf-T_hy-jbf3XCEx1EieZRkqVyzs8PNT6BawtU"></iframe>
+   </ul>
