--- a/G4c.html
+++ b/G4c.html
@@ -24,7 +24,7 @@
 <ul>
  <h4>Letter of Rejected</h4>
 <div id ="photo">
-  <img src="Notification About Your Entry to the 2025 G4C Student Challenge.eml" width="1000px" height="400px"> 
+  <img src="IMG_0793.jpg" width="470px" height="400px"> 
              </div>
  </ul>
 
@@ -39,3 +39,9 @@
     <ul>
       <h4>LoveEarth</h4>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/3BAf7Pf-T_hy-jbf3XCEx1EieZRkqVyzs8PNT6BawtU/embed"></iframe>
+     <ul>
+ <h4>Letter of Rejected</h4>
+<div id ="photo">
+  <img src="IMG_0794.jpg" width="470px" height="400px"> 
+             </div>
+ </ul>
