--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,7 +11,8 @@
      <div class="container1">
         <div id="description">
   <p>Hello, My name is wendy I am a student at Thomas Edison. I am in the class for Web development. I love my class. I enjoy what I do. I love creating websites. It brings me happiness because I get to put in my own personality and decoration into these apps.  </p>
-          </div>
+ <p> I'm a senior, I have many goals these year my one is to pass my certification after many trys. I am going to study to make sure that i am able to get my work done on time. </p>
+        </div>
           <div id ="photo">
   <img src="IMG_0122.jpeg" alt="Wendolyn" width="470px" height="400px"> 
              </div>
