--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="Flowchart.html">Flowcharts</a></li>
       <li><a href="https://wendyf30.github.io/Sophomore_Portfolio/">Sphomore_Portfolio</a></li>
         <li><a href="G4c.html">G4C-challenge</a></li>
-      <li><a href="https://docs.google.com/presentation/d/1W-b6UoWtaHk5rO9g44zCxoa1tiIerckxQTxwhzCl0EQ/edit?usp=sharing">NoteBook</a></li>
+      <li><a href="https://wendyf30.github.io/petlove/">Fluffy Tails </a></li>
     
     </ul>
     </div>
